MLE-23024 Sonar fixes for Spark 4 upgrade
Bunch of little tweaks to take advantage of Java 17.